# When-Vulkan-meets-Rust-Codes

./: README.md
1.0/src/: lib.rs  main.rs  window.rs
1.0/src/app/: app.rs
1.1/src/: lib.rs  main.rs
1.1/src/app/: app.rs  mod.rs  vki.rs
1.2/src/app/: app.rs  mod.rs  validation.rs  vki.rs
1.2/src/utils/: tools.rs
1.3/src/: window.rs
1.3/src/app/: mod.rs  physical_device.rs  validation.rs  vki.rs
1.4/: Cargo.toml
1.4/src/app/: app.rs  consts.rs  logical_device.rs  mod.rs  physical_device.rs  validation.rs  vki.rs
1.5/src/: lib.rs
1.5/src/app/: app.rs  mod.rs  physical_device.rs  surface.rs  vki.rs
1.6/src/: main.rs
1.6/src/app/: app.rs  consts.rs  logical_device.rs  mod.rs  surface.rs  swapchain.rs  validation.rs  vki.rs
1.6/src/events_handler/: mod.rs
1.6/src/utils/: tools.rs
