[package]
name = "vk_00"
version = "0.1.0"
authors = ["lemonhx <runzhe2001@hotmail.com>"]
edition = "2018"

[dependencies]
winit     = "0.19.0"
ash       = "0.28.0"
num       = "0.2"
cgmath    = "0.17"
image     = "0.21"
memoffset = "0.3"
tobj      = "0.1.6"
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.6", features = ["windef", "libloaderapi"] }
